--- a/_posts/20190120.md
+++ b/_posts/20190120.md
@@ -1,7 +1,7 @@
 ---
 title: "ജാതകം, ജ്യോതിഷം - സത്യമോ  മിഥ്യയോ ?"
 published: 2019-01-20
-excerpt: ""
+excerpt: "ജാതകം, ജ്യോതിഷം ഇതെല്ലാം നമ്മൾ ദൈനംദിനം കേൾക്കുന്ന പദങ്ങൾ ആണ്. ഇതിന്റെ എല്ലാം അർഥം എന്താണ്?"
 permalink: /posts/2019/01/ജാതകം-ജ്യോതിഷം-സത്യമോ-മിഥ്യയോ
 ---
 ജാതകം, ജ്യോതിഷം ഇതെല്ലാം നമ്മൾ ദൈനംദിനം കേൾക്കുന്ന പദങ്ങൾ ആണ്. ഇതിന്റെ എല്ലാം അർഥം എന്താണ്?   
